Logo Link Update

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <header id="header" class="header-tops">
     <div class="container">
         
-       <h1 class="mt-3"><a href="index.html">Barış Palabıyık</a></h1>
+       <h1 class="mt-3"><a href="/">Barış Palabıyık</a></h1>
       <h2>I'm a passionate <span>web developer</span> from Istanbul</h2>
 
       
