job definiton update

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Sr. Front-End Software Engineer</h3>
           <p class="font-italic">
-            I am an ambitious Web Developer with an Electrical-Electronics Engineering and Business degree who is motivated to improve himself on web technologies.
+            I am an ambitious Web Developer with an Electrical-Electronics Engineering and a Business degree, who specialized in Front End. I have got a broad knowledge of the web technologies, I use HTML, CSS, JavaScript, Vue.js, Node.js(as package mangaer) Bootstrap and extensively Photoshop in my current job. Apart from my current focus, I have worked with WordPress ecosystem for some time, managed AWS' servers and utilized PHP scripts to meet many projects’ needs. Prior to that I have programmed embedded systems with C and used Assembly language academically. I am looking for a place within a developer team where I can improve myself on every side of the web, and develop powerful and stable web applications.
           </p>
           <div class="row">
             <div class="col-lg-4">
@@ -311,7 +311,7 @@
             <ul>
               <li>As a cross category front-end developer, I am mainly responsible for building, optimizing, maintaining and updating the platform's pages.
               </li>
-              <li>HTML, CSS, JavaScript, Bootstrap, Jquery and Photoshop are the main technologies I use. </li>
+              <li>HTML, CSS, JavaScript, Vue.js, Node.js(as npm), Bootstrap, Jquery, Grunt, Adobe Illustrator and Photoshop are the main technologies I use.</li>
               <li>By continuously co-operating with designers and management, I am also developing project and general management skills.</li>
             </ul>
             </p>
@@ -325,8 +325,8 @@
             <p>
             <ul>
               <li>I have been developing and designing sophisticated websites with multi-language and e-commerce support for corporations and organisations in many sizes. </li>
-              <li>I operated solo for a long period of time in many steps of the projects, hence I developed very different set of skills in front-end and back-end side of the web. </li>
               <li>HTML, CSS, JavaScript, PHP, WordPress, Bootstrap, AWS and Photoshop are frequently being used according to the projects’ needs.</li>
+              <li>I operated solo for a long period of time in many steps of the projects, hence I developed very different set of skills in front-end and back-end side of the web. </li>
               <li>By directly engaging with the clients, marketing teams and designers, I was also be able to improve myself on many soft skills such as customer relationship and project management.</li>
             </ul>
             </p>
@@ -389,14 +389,15 @@
             <h5>2015 - 2018</h5>
             <p><em>Mahmutbey Dilmenler – Istanbul, Turkey
              <a target="_blank" href="http://www.kemerburgaz.edu.tr/en">http://www.kemerburgaz.edu.tr/en</a></em></p>
-            <p>With the education I had I can plan, develop and design electronic components, software, products, or systems for commercial, industrial, medical, military, or scientific applications. I have planned and developed applications, and modifications for electronic properties, used in parts and systems in order to improve technical performance.</p>
+            <p>With the education I had I can plan, develop and design electronic components, softwares, products, or systems for commercial, industrial, medical, military, or scientific applications. In order to improve technical performance, I can plan and develop applications, and modifications for electronic properties of parts and systems.
+            </p>
           </div>
           <div class="resume-item">
             <h4>Business Administration (B.Sc.) (GPA: 3.03 / 4.00)</h4>      
             <h4 class="company"><img src="assets/img/anadolulogo.jpg" alt="Anadolu Üniversitesi Logosu" srcset="">Anadolu University</h4>
             <h5>2015 - 2018</h5>
             <p><em>Eskisehir, Turkey <br>
-              <a target="_blank" href="https://www.anadolu.edu.tr/en">https://www.anadolu.edu.tr/en</a></em></p>            <p>With the education that I had I can establish and carry out departmental or organizational goals, policies, and procedures. Direct, and oversee an organization’s financial, and budgetary activities. Manage general activities, related to making products, and providing services and innovate, by applying new technologies in the workplace.</p>
+              <a target="_blank" href="https://www.anadolu.edu.tr/en">https://www.anadolu.edu.tr/en</a></em></p>            <p>With the education that I had, I can establish and carry out departmental or organizational goals, policies, and procedures. I can manage, and oversee an organization’s financial, budgetary and general activities that are related to making products, and providing services.</p>
           </div>
           <div class="resume-item">
             <h4>Electronics Technology (A.S.) (GPA: 3.22 / 4.00)</h4>
