--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Sr. Front-End Software Engineer</h3>
           <p class="font-italic">
-            I am an ambitious Web Developer with an Electrical-Electronics Engineering and a Business degree, who
-            specialized in Front End. I have got a broad knowledge of the web technologies, I use HTML, CSS, JavaScript,
-            Vue.js, Node.js(as package mangaer) Bootstrap and extensively Photoshop in my current job. Apart from my
-            current focus, I have worked with WordPress ecosystem for some time, managed AWS' servers and utilized PHP
-            scripts to meet many projects’ needs. Prior to that I have programmed embedded systems with C and used
-            Assembly language academically. I am looking for a place within a developer team where I can improve myself
-            on every side of the web, and develop powerful and stable web applications.
+            I am a Web Developer with an Electrical-Electronics Engineering and a Business degree, who specialized in
+            Front End. I have a broad knowledge of the web technologies; I use HTML, CSS, JavaScript, React.js, Next.js,
+            Vue.js, Bootstrap, Tailwind and Photoshop in my professional and personal projects. Apart from my current
+            focus, I have worked with WordPress ecosystem for some time, managed AWS' servers and utilized PHP scripts
+            to meet many projects’ needs. Prior to that, I have programmed embedded systems with C and used Assembly
+            language academically. I am looking for a place within a developer team where I can improve myself on every
+            side of the web, and develop powerful and stable web applications.
           </p>
           <div class="row">
             <div class="col-lg-4">
@@ -107,9 +107,9 @@
           <p>
             As a cross category front-end developer, I am mainly responsible for building, optimizing, maintaining and
             updating the platform's pages.
-            HTML, CSS, JavaScript, Vue.js, React, Node.js (as npm), Bootstrap, JQuery, Illustrator and Photoshop are the
-            main technologies I use. By continuously co-operating with designers and management, I am also developing
-            project and general management skills.
+            HTML, CSS, JavaScript, React.js, Vue.js, Node.js (as npm), Bootstrap and Photoshop are the main technologies
+            I use. By continuously co-operating with designers and management, I am also developing project and general
+            management skills.
         </div>
       </div>
 
@@ -196,7 +196,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">WordPress/CMS <i class="val">100%</i></span>
+            <span class="skill">React <i class="val">70%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -204,7 +204,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">React <i class="val">75%</i></span>
+            <span class="skill">Next <i class="val">75%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
               </div>
