--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Sr. Front-End Software Engineer</h3>
           <p class="font-italic">
-            I am a Web Developer with an Electrical-Electronics Engineering and a Business degree, who specialized in
+            I am a Web Developer with an ElectricalElectronics Engineering and a Business degree, who specialized in
             Front End. I have a broad knowledge of the web technologies; I use HTML, CSS, JavaScript, React.js, Next.js,
             Vue.js, Bootstrap, Tailwind and Photoshop in my professional and personal projects. Apart from my current
             focus, I have worked with WordPress ecosystem for some time, managed AWS' servers and utilized PHP scripts
@@ -106,10 +106,9 @@
           </div>
           <p>
             As a cross category front-end developer, I am mainly responsible for building, optimizing, maintaining and
-            updating the platform's pages.
-            HTML, CSS, JavaScript, React.js, Vue.js, Node.js (as npm), Bootstrap and Photoshop are the main technologies
-            I use. By continuously co-operating with designers and management, I am also developing project and general
-            management skills.
+            updating the platform's pages. HTML, CSS, JavaScript, React.js, Vue.js, Node.js (as npm), Bootstrap and
+            Photoshop are the main technologies I use. By continuously co-operating with designers and management, I am
+            also developing project and general management skills.
         </div>
       </div>
 
