--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Sr. Front-End Software Engineer</h3>
           <p class="font-italic">
-            I am a Web Developer with an ElectricalElectronics Engineering and a Business degree, who specialized in
-            Front End. I have a broad knowledge of the web technologies; I use HTML, CSS, JavaScript, React.js, Next.js,
-            Vue.js, Bootstrap, Tailwind and Photoshop in my professional and personal projects. Apart from my current
+            I am a Sr. Web Developer with an Electrical-Electronics Engineering and a Business degree, who specialized
+            in Front End. I have a broad knowledge of the web technologies; I use HTML, CSS, JavaScript, React.js, Next.js,
+            Bootstrap, Tailwind, MUI and Photoshop in my professional and personal projects. For Fullstack work I
+            utilize Node.js, Prisma, tRPC, mySQL or PostgreSQL. Apart from my current
             focus, I have worked with WordPress ecosystem for some time, managed AWS' servers and utilized PHP scripts
             to meet many projects’ needs. Prior to that, I have programmed embedded systems with C and used Assembly
-            language academically. I am looking for a place within a developer team where I can improve myself on every
-            side of the web, and develop powerful and stable web applications.
+            language academically.
           </p>
           <div class="row">
             <div class="col-lg-4">
@@ -138,7 +138,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class='bx bx-globe'></i>
-            <span data-toggle="counter-up">2</span>
+            <span data-toggle="counter-up">3</span>
             <p>Country Experience</p>
           </div>
         </div>
@@ -146,7 +146,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class='bx bx-calendar'></i>
-            <span class="addPlus" data-toggle="counter-up">2</span>
+            <span class="addPlus" data-toggle="counter-up">3</span>
             <p>Years of Experience</p>
           </div>
         </div>
