--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul>
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About Me</a></li>
-          <li><a href="#resume">Resume</a></li>
+          <!-- <li><a href="#resume">Resume</a></li> -->
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -311,8 +311,8 @@
 
 
   </section><!-- End About Section -->
-
-  <!-- ======= Resume Section ======= -->
+<!--
+   ======= Resume Section ======= 
   <section id="resume" class="resume">
     <div class="container">
 
@@ -432,7 +432,7 @@
 
 
 
-          <!--Col End-->
+          Col End-->
         </div>
         <div class="col-lg-6">
 
@@ -477,10 +477,9 @@
       </div>
 
     </div>
-  </section><!-- End Resume Section -->
+  </section>
 
-
-
+-->
 
   <!-- ======= Contact Section ======= -->
   <section id="contact" class="contact">
