--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul>
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About Me</a></li>
-          <!-- <li><a href="#resume">Resume</a></li> -->
+          <li><a href="#resume">Resume</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -80,7 +80,8 @@
           <h3>Sr. Front-End Software Engineer</h3>
           <p class="font-italic">
             I am a Sr. Web Developer with an Electrical-Electronics Engineering and a Business degree, who specialized
-            in Front End. I have a broad knowledge of the web technologies; I use HTML, CSS, JavaScript, React.js, Next.js,
+            in Front End. I have a broad knowledge of the web technologies; I use HTML, CSS, JavaScript, React.js,
+            Next.js,
             Bootstrap, Tailwind, MUI and Photoshop in my professional and personal projects. For Fullstack work I
             utilize Node.js, Prisma, tRPC, mySQL or PostgreSQL. Apart from my current
             focus, I have worked with WordPress ecosystem for some time, managed AWS' servers and utilized PHP scripts
@@ -105,10 +106,11 @@
             </div>
           </div>
           <p>
-            As a cross category front-end developer, I am mainly responsible for building, optimizing, maintaining and
-            updating the platform's pages. HTML, CSS, JavaScript, React.js, Vue.js, Node.js (as npm), Bootstrap and
-            Photoshop are the main technologies I use. By continuously co-operating with designers and management, I am
-            also developing project and general management skills.
+            Mainly working on TicketNetwork's cloud-based loan management system and loan origination system. Product
+            utilizes
+            CakePHP, where I develop with HTML, CSS, JS, PHP, Jquery, Bootstrap, MySQL to create, update and design
+            product's components, logic and pages. In parallel, I utilize React, Next, Typescript, Prisma, Tailwind,
+            MySQL and tRPC to develop fullstack type-safe applications for the parent company.
         </div>
       </div>
 
@@ -146,7 +148,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class='bx bx-calendar'></i>
-            <span class="addPlus" data-toggle="counter-up">3</span>
+            <span class="addPlus" data-toggle="counter-up">5</span>
             <p>Years of Experience</p>
           </div>
         </div>
@@ -195,25 +197,25 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">React <i class="val">80%</i></span>
+            <span class="skill">React <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Next <i class="val">75%</i></span>
+            <span class="skill">Next <i class="val">95%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">PHP <i class="val">45%</i></span>
+            <span class="skill">Node <i class="val">85%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
@@ -312,7 +314,7 @@
 
   </section><!-- End About Section -->
 
-   ======= Resume Section ======= 
+  ======= Resume Section =======
   <section id="resume" class="resume">
     <div class="container">
 
@@ -323,7 +325,7 @@
       <div class="row">
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
-          <!--
+
           <div class="resume-item">
             <h4>Senior Web Developer</h4>
             <h4 class="company"> <img
@@ -335,8 +337,11 @@
             </p>
             <p>
             <ul>
-              <li>Designing, developing user interfaces and user experiences for the company's web application.</li>
-              <li>White labeling work by creating custom themes for the customers that uses our portal.</li>
+              <li>Mainly working on company's cloud-based loan management system and loan origination system. Product
+                utilizes CakePHP, where I develop with HTML, CSS, JS, PHP, Jquery, Bootstrap, MySQL to create, update
+                and design product's components, logic and pages. In parallel, I utilize React, Next, Typescript,
+                Prisma, Tailwind, MySQL and tRPC to develop fullstack type-safe applications for the parent company.
+              </li>
             </ul>
             </p>
           </div>
@@ -353,7 +358,6 @@
             <ul>
               <li>As a cross category front-end developer, I am mainly responsible for building, optimizing, maintaining
                 and updating the platform's pages. </li>
-
               <li>HTML, CSS, JavaScript, Vue.js, React, Node.js (as npm), Bootstrap, JQuery, Illustrator and Photoshop
                 are the main technologies I use.</li>
               <li>By continuously co-operating with designers and management, I am also developing project and general
@@ -381,8 +385,6 @@
             </ul>
             </p>
           </div>
-
-
           <div class="resume-item">
             <h4>Web Developer</h4>
             <h4 class="company"><img src="assets/img/uizlogo.jpg" alt="UIZ Logosu" srcset="">Umwelt und
@@ -398,9 +400,6 @@
             </ul>
             </p>
           </div>
-
-
-
           <div class="resume-item">
             <h4>Electrical and Electronics Engineer</h4>
             <h4 class="company">Yelkovan Engineering</h4>
@@ -414,8 +413,6 @@
             </ul>
             </p>
           </div>
-
-
           <div class="resume-item">
             <h4>Electrical and Electronics Engineer</h4>
             <h4 class="company"><img src="assets/img/FipaLogoSlogan.gif" alt="Fipa Soğutma Logosu" srcset="">Fipa
@@ -430,15 +427,8 @@
             </ul>
             </p>
           </div>
--->
-
-
-       
         </div>
-        
         <div class="col-lg-6">
-
-
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
             <h4>Electrical and Electronics Engineering (B.Sc.) (GPA: 3.01 / 4.00, %100 English)(75% Scholarship)</h4>
@@ -480,9 +470,6 @@
 
     </div>
   </section>
-
--->
-
   <!-- ======= Contact Section ======= -->
   <section id="contact" class="contact">
     <div class="container">
